src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_no_zero_blank.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 5,
  "ploc": 4,
  "lloc": 3,
  "cloc": 2,
  "blank": 1,
  "sloc_average": 5.0,
  "ploc_average": 4.0,
  "lloc_average": 3.0,
  "cloc_average": 2.0,
  "blank_average": 1.0,
  "sloc_min": 5,
  "sloc_max": 5,
  "cloc_min": 2,
  "cloc_max": 2,
  "ploc_min": 4,
  "ploc_max": 4,
  "lloc_min": 3,
  "lloc_max": 3,
  "blank_min": 1,
  "blank_max": 1
}
