src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_try_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 8.0,
  "ploc": 8.0,
  "lloc": 4.0,
  "cloc": 0.0,
  "blank": 0.0,
  "sloc_average": 8.0,
  "ploc_average": 8.0,
  "lloc_average": 4.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 8.0,
  "sloc_max": 8.0,
  "cloc_min": 0.0,
  "cloc_max": 0.0,
  "ploc_min": 8.0,
  "ploc_max": 8.0,
  "lloc_min": 4.0,
  "lloc_max": 4.0,
  "blank_min": 0.0,
  "blank_max": 0.0
}
