src/metrics/snapshots/big_code_analysis__metrics__loc__tests__tcl_apply_closure_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 4,
  "ploc": 4,
  "lloc": 4,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 2.0,
  "ploc_average": 2.0,
  "lloc_average": 2.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 4,
  "sloc_max": 4,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 4,
  "ploc_max": 4,
  "lloc_min": 4,
  "lloc_max": 4,
  "blank_min": 0,
  "blank_max": 0
}
